--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>About me</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="src/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -151,6 +151,6 @@
         <footer>Original by <a href="https://codepen.io/stringpiggy/pen/WwZqog"> Candy Tsai.</a></footer>
     </div>
 </div>
-<script src="main.js"></script>
+<script src="src/main.js"></script>
 </body>
 </html>
