--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <p>Great passion towards frontend web development, embraces new technology and loves to share information
                 with others.</p>
         </section>
-        <footer>Original by <a href="https://codepen.io/stringpiggy/pen/WwZqog"> Candy Tsai.</a></footer>
+<!--        <footer>Original by <a href="https://codepen.io/stringpiggy/pen/WwZqog"> Candy Tsai.</a></footer>-->
     </div>
 </div>
 <script src="src/main.js"></script>
