--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
                 <li class="sec-tag">Docker</li>
             </ul>
         </section>
-        <section class="block about">
+        <!--<section class="block about">
             <h2>About Me</h2>
             <p>Great passion towards frontend web development, embraces new technology and loves to share information
                 with others.</p>
-        </section>
-<!--        <footer>Original by <a href="https://codepen.io/stringpiggy/pen/WwZqog"> Candy Tsai.</a></footer>-->
+        </section>-->
+        <footer>Original by <a href="https://codepen.io/stringpiggy/pen/WwZqog"> Candy Tsai.</a></footer>
     </div>
 </div>
 <script src="src/main.js"></script>
