--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
         </div>
         <div class="social">
             <ul>
-                <li><a href="https://www.facebook.com/manhdd.36/" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+                <li><a href="https://www.facebook.com/manhdd.36/" target="_blank"><i
+                        class="fa fa-facebook-square fa-2x"></i></a></li>
                 <li><a href="https://github.com/duymanh3602" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
-                <li><a href="https://www.instagram.com/_manh.dinh_/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
+                <li><a href="https://www.instagram.com/_manh.dinh_/" target="_blank"><i
+                        class="fa fa-instagram fa-2x"></i></a></li>
                 <li><a href="https://twitter.com/3602Dinh" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/%C4%91inh-duy-m%E1%BA%A1nh-5bb126219/" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></i>
+                <li><a href="https://www.linkedin.com/in/%C4%91inh-duy-m%E1%BA%A1nh-5bb126219/" target="_blank"><i
+                        class="fa fa-linkedin-square fa-2x"></i></a></i>
                 </li>
             </ul>
         </div>
@@ -53,8 +56,16 @@
             <h2>Education</h2>
             <div class="degree">
                 <h3>B.S. Bachelor Program of Information Technology</h3>
-                <p>University of Engineering and Technology, VietNam National University (UET-VNU)<br>GPA: 3.2+ <br> 2020-Present
+                <p>University of Engineering and Technology, VietNam National University (UET-VNU)<br>GPA: 3.2+ <br>
+                    2020-Present
                 </p>
+            </div>
+        </section>
+        <section class="block achieve">
+            <h2>Achievement</h2>
+            <div class="degree">
+                <h3>Scholarship Sencouraging Study</h3>
+                <p>Semester II 2022-2023<br>GPA: 3.9/4.0</p>
             </div>
         </section>
         <!--<section class="block exp">
@@ -100,7 +111,8 @@
             <h2>Projects</h2>
             <div class="exp-item">
                 <h3>School Projects</h3>
-                <p><a href="https://github.com/Web-Dev-App/BTL-Web" target="_blank">Web Application Development</a> (Back-end)</p>
+                <p><a href="https://github.com/Web-Dev-App/BTL-Web" target="_blank">Web Application Development</a>
+                    (Back-end)</p>
                 <p>2022</p>
 
                 <p><a href="https://github.com/duymanh3602/CNPM" target="_blank">Java Application</a></p>
@@ -114,6 +126,10 @@
         </section>
         <section class="block skills">
             <h2>Primary Skills</h2>
+            <h3>Application</h3>
+            <ul>
+                <li class="pri-tag">Android</li>
+            </ul>
             <h3>Frontend</h3>
             <ul>
                 <li class="pri-tag">HTML</li>
