--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h2>Education</h2>
             <div class="degree">
                 <h3>B.S. Bachelor Program of Information Technology</h3>
-                <p>University of Engineering and Technology, VietNam National University (UET-VNU)<br>GPA: 3.2+ <br>
+                <p>University of Engineering and Technology, VietNam National University (UET-VNU)<br>CGPA: 3.2+ <br>
                     2020-Present
                 </p>
             </div>
