--- a/index.html
+++ b/index.html
@@ -110,18 +110,37 @@
         <section class="block projects">
             <h2>Projects</h2>
             <div class="exp-item">
-                <h3>School Projects</h3>
-                <p><a href="https://github.com/Web-Dev-App/BTL-Web" target="_blank">Web Application Development</a>
-                    (Back-end)</p>
+                <h3>Android Application</h3>
+                <p><a href="https://github.com/duymanh3602/Medifin" target="_blank">Medifin - Tìm kiếm bác sĩ</a></p>
+                <p><a class="research"> Remade and Improved from a sample source</a></p>
+                <p>Using Java, RealTime FireBase, ...</p>
+                <p>2023</p>
+            </div>
+            <div class="exp-item">
+                <h3>Web Application</h3>
+                <p><a href="https://github.com/Web-Dev-App/BTL-Web" target="_blank">Production Move</a><a class="research"> (collab)</a></p>
+                <p>Using Java, SpringBoot, JPA, Hibernate, JWT, ...</p>
                 <p>2022</p>
-
-                <p><a href="https://github.com/duymanh3602/CNPM" target="_blank">Java Application</a></p>
+            </div>
+            <div class="exp-item">
+                <h3>JavaFX Desktop Application</h3>
+                <p><a href="https://github.com/duymanh3602/CNPM" target="_blank">Quản lý Khách sạn</a></p>
+                <p>Using Java, JavaFX, PDF exports, ...</p>
                 <p>2022</p>
-
-                <p><a href="https://github.com/duymanh3602/myDictionary" target="_blank">Dictionary w/ API</a></p>
+            </div>
+            <div class="exp-item">
+                <h3>Java Application</h3>
+                <p><a href="https://gitlab.com/duymanh3602/bomberman_oop_n2" target="_blank">Game Bomberman</a><a class="research"> (collab)</a></p>
+                <p>Using Java, ...</p>
                 <p>2021</p>
-
-                <p><a href="https://github.com/duymanh3602" target="_blank">More in my GitHub</a></p>
+            </div>
+            <div class="exp-item">
+                <h3>JavaFX Desktop Application</h3>
+                <p><a href="https://github.com/duymanh3602/myDictionary" target="_blank">MyDictionary - Ứng dụng từ điển</a></p>
+                <p>2021</p>
+            </div>
+            <div class="exp-item">
+                <h3><a href="https://github.com/duymanh3602" target="_blank">more</a></h3>
             </div>
         </section>
         <section class="block skills">
