--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 </li>
             </ul>
         </div>
+        <div>
+            <a href="assets/DinhManh_CV.pdf" title="" download><button class="get-cv" ><span>Get My CV</span></button></a>
+        </div>
     </section>
     <div class="wrapper">
         <section class="block info">
