--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 </li>
             </ul>
         </div>
-        <div>
-            <a href="assets/DinhManh_CV.pdf" title="" download><button class="get-cv" ><span>Get My CV</span></button></a>
+        <div class="cv">
+            <a href="assets/DinhManh_CV.pdf" title="" download class="get-cv" ><span>Get My CV</span></a>
         </div>
     </section>
     <div class="wrapper">
