--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
         </div>
         <div class="cv">
-            <a href="assets/DinhManh_CV.pdf" title="" download class="get-cv" ><span>Get My CV</span></a>
+            <a href="assets/ManhDinh_CV.pdf" title="" download class="get-cv" ><span>Get My CV</span></a>
         </div>
     </section>
     <div class="wrapper">
