--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h3>Languages</h3>
             <ul>
                 <li class="pri-tag">VietNamese</li>
-                <li class="pri-tag">English</li>
+                <li class="pri-tag">English (TOEIC 735)</li>
             </ul>
         </section>
         <section class="block edu">
