#13 - update cv link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
         </div>
         <div class="cv">
-            <a href="assets/ManhDinh_CV.pdf" title="" download class="get-cv" ><span>Get My CV</span></a>
+            <a href="https://export-download.canva.com/5z2o4/DAFkTw5z2o4/50/0-4032241395546079255.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJHKNGJLC2J7OGJ6Q%2F20230618%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230618T001642Z&X-Amz-Expires=60161&X-Amz-Signature=d922e52dd35c7234cb2d5661f7e0e3590b9e182652450c5156bd7729b30a265b&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%2A%3DUTF-8%27%27ManhDinh_CV_EN.pdf&response-expires=Sun%2C%2018%20Jun%202023%2016%3A59%3A23%20GMT" title="" download class="get-cv" ><span>Get My CV</span></a>
         </div>
     </section>
     <div class="wrapper">
