#14 - update cv file, exp

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
         </div>
         <div class="cv">
-            <a href="https://export-download.canva.com/5z2o4/DAFkTw5z2o4/50/0-4032241395546079255.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJHKNGJLC2J7OGJ6Q%2F20230618%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230618T001642Z&X-Amz-Expires=60161&X-Amz-Signature=d922e52dd35c7234cb2d5661f7e0e3590b9e182652450c5156bd7729b30a265b&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%2A%3DUTF-8%27%27ManhDinh_CV_EN.pdf&response-expires=Sun%2C%2018%20Jun%202023%2016%3A59%3A23%20GMT" title="" download class="get-cv" ><span>Get My CV</span></a>
+            <a href="assets/ManhDinh_CV_EN.pdf" title="" download class="get-cv" ><span>Get My CV</span></a>
         </div>
     </section>
     <div class="wrapper">
@@ -71,22 +71,22 @@
                 <p>Semester II 2022-2023<br>GPA: 3.9/4.0</p>
             </div>
         </section>
-        <!--<section class="block exp">
+        <section class="block exp">
             <h2>Experience</h2>
-            &lt;!&ndash;<div class="exp-item">
-                <h3>Software Development Intern</h3>
-                <p><a href="https://www.yoctol.com/" target="_blank" rel="noopener noreferrer">Yoctol Info</a>
-                </p>
-                <p>2016/06 - 2017/03</p>
+            <div class="exp-item">
+                <h3>Java Development Intern</h3>
+                <!--<p><a href="https://www.yoctol.com/" target="_blank" rel="noopener noreferrer">Yoctol Info</a>
+                </p>-->
+                <p>06/2023 - </p>
                 <ul>
-                    <li><a href="https://ptter.yoctol.com" target="_blank" rel="noopener noreferrer">Ptter</a> (Website
+                    <!--<li><a href="https://ptter.yoctol.com" target="_blank" rel="noopener noreferrer">Ptter</a> (Website
                         and LINE bot) - Visualization tool for PTT
                     </li>
                     <li><a href="https://www.yoctol.com/" target="_blank" rel="noopener noreferrer">Company Website</a>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
-            <div class="exp-item">
+            <!--<div class="exp-item">
                 <h3>Web Development Intern</h3>
                 <p><a href="https://tw.voicetube.com" target="_blank" rel="noopener noreferrer">VoiceTube</a>
                     (紅點子科技股份有限公司 REDIdea Co., Ltd)</p>
@@ -108,8 +108,8 @@
                     <li><a href="https://stringpiggy.hpd.io/frontend-teaching/" target="_blank">Teaching Review
                         (Chinese)</a></li>
                 </ul>
-            </div>&ndash;&gt;
-        </section>-->
+            </div>-->
+        </section>
         <section class="block projects">
             <h2>Projects</h2>
             <div class="exp-item">
