--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section class="block exp">
             <h2>Experience</h2>
             <div class="exp-item">
-                <h3>Java Development Intern</h3>
+                <h3>Web Development Intern</h3>
                 <!--<p><a href="https://www.yoctol.com/" target="_blank" rel="noopener noreferrer">Yoctol Info</a>
                 </p>-->
                 <p>06/2023 - </p>
