--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="manifest" href="manifest.json" />
     <title>About me</title>
     <link rel="stylesheet" href="src/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="fontawesome/css/all.css">
+    <link rel="stylesheet" href="src/modal.css">
 </head>
 <body>
 <div id="container">
@@ -15,25 +17,24 @@
             <p>I'm a Developer!</p>
             <p>And here's sth about me.</p>
         </div>
-
-
         <div class="profile"></div>
         <div class="name">
             <ul>
                 <li>Đinh Duy Mạnh</li>
-                <li>Intern Java Developer</li>
+                <li>Intern Developer</li>
             </ul>
         </div>
         <div class="social">
             <ul>
-                <li><a href="https://www.facebook.com/manhdd.36/" target="_blank"><i
-                        class="fa fa-facebook-square fa-2x"></i></a></li>
-                <li><a href="https://github.com/duymanh3602" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
-                <li><a href="https://www.instagram.com/_manh.dinh_/" target="_blank"><i
-                        class="fa fa-instagram fa-2x"></i></a></li>
-                <li><a href="https://twitter.com/3602Dinh" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/%C4%91inh-duy-m%E1%BA%A1nh-5bb126219/" target="_blank"><i
-                        class="fa fa-linkedin-square fa-2x"></i></a></i>
+                <li><a href="https://www.facebook.com/manhdd.36/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a></li>
+                <li><a href="https://github.com/duymanh3602" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a></li>
+                <li><a href="https://www.instagram.com/_manh.dinh_/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
+                <li><a href="https://twitter.com/3602Dinh" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></i></a></li>
+                <li><a href="https://www.linkedin.com/in/%C4%91inh-duy-m%E1%BA%A1nh-5bb126219/" target="_blank">
+                    <i class="fa-brands fa-linkedin-in fa-2x"></i></a>
+                </li>
+                <li id="myBtn"><a>
+                    <i class="fa-solid fa-ellipsis fa-2x"></i></a>
                 </li>
             </ul>
         </div>
@@ -188,6 +189,22 @@
         </section>-->
         <footer>Original by <a href="https://codepen.io/stringpiggy/pen/WwZqog"> Candy Tsai.</a></footer>
     </div>
+</div>
+
+<div id="myModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <div class="modal-header">
+            <span class="close">&times;</span>
+            <h2>More information about me</h2>
+        </div>
+        <div class="modal-body">
+            <p onclick="window.open('https://manhdinh.dev/public/');">Public Assets</p>
+            <p onclick="window.open('https://manhdinh.dev/page/coming_soon.html');">Keep in touch</p>
+            <p onclick="window.open('https://manhdinh.dev/page/coming_soon.html')">Private message</p>
+        </div>
+    </div>
+
 </div>
 <script src="src/main.js"></script>
 </body>
