--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="https://www.facebook.com/manhdd.36/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a></li>
                 <li><a href="https://github.com/duymanh3602" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a></li>
                 <li><a href="https://www.instagram.com/_manh.dinh_/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
-                <li><a href="https://twitter.com/3602Dinh" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></i></a></li>
+                <li><a href="https://twitter.com/3602Dinh" target="_blank"><img id="x" src="/assets/x-twitter.svg" alt="X"/></a></li>
                 <li><a href="https://www.linkedin.com/in/%C4%91inh-duy-m%E1%BA%A1nh-5bb126219/" target="_blank">
                     <i class="fa-brands fa-linkedin-in fa-2x"></i></a>
                 </li>
