--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
             <h3>Languages</h3>
             <ul>
                 <li class="pri-tag">VietNamese</li>
-                <li class="pri-tag">English (TOEIC 735)</li>
+                <li class="pri-tag-en">English (TOEIC 735)
+                    <span><img src="assets/toeic.jpg" alt="image" height="300" /></span>
+                </li>
             </ul>
         </section>
         <section class="block edu">
             <h2>Education</h2>
             <div class="degree">
                 <h3>B.S. Bachelor Program of Information Technology</h3>
-                <p>University of Engineering and Technology, VietNam National University (UET-VNU)<br>CGPA: 3.2+ <br>
+                <p>University of Engineering and Technology, VietNam National University (UET-VNU)<br><a href="/page/bang_diem.html">CGPA: 3.2+ </a><br>
                     2020-Present
                 </p>
             </div>
