change shown chrome image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <ul>
                 <li class="pri-tag">VietNamese</li>
                 <li class="pri-tag-en">English (TOEIC 735)
-                    <span><img src="assets/toeic.jpg" alt="image" height="300" /></span>
+                    <!-- <span><img src="assets/toeic.jpg" alt="image" height="300" /></span> -->
                 </li>
             </ul>
         </section>
