docs: update index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h3>Languages</h3>
             <ul>
                 <li class="pri-tag">VietNamese</li>
-                <li class="pri-tag-en">English (TOEIC 735)
+                <li class="pri-tag-en">English (TOEIC 735/990 LR & 300/400 SW)
                     <!-- <span><img src="assets/toeic.jpg" alt="image" height="300" /></span> -->
                 </li>
             </ul>
