--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2>Education</h2>
             <div class="degree">
                 <h3>B.S. Bachelor Program of Information Technology</h3>
-                <p>University of Engineering and Technology, VietNam National University (UET-VNU)<br><a href="/page/bang_diem.html">CGPA: 3.2+ </a><br>
+                <p>University of Engineering and Technology, VietNam National University (UET-VNU)<br><a href="">CGPA: 3.2+ </a><br>
                     2020-Present
                 </p>
             </div>
