--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="name">
             <ul>
                 <li>Đinh Duy Mạnh</li>
-                <li>Intern Developer</li>
+                <li>Junior Developer</li>
             </ul>
         </div>
         <div class="social">
